force-app/main/default/objects/studendCap__c/studendCap__c.object-meta.xml
<CustomObject>
    <label>studendCap</label>
    <nameField>
        <label>studendCap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>student</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>