force-app/main/default/objects/studendCap__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <label>branch</label>
    <referenceTo>branchCap__c</referenceTo>
    <relationshipLabel>student</relationshipLabel>
    <relationshipName>student</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>