force-app/main/default/objects/studendCap__c/fields/course__c.field-meta.xml
<CustomField>
    <fullName>course__c</fullName>
    <label>course</label>
    <referenceTo>courseCap__c</referenceTo>
    <relationshipLabel>student</relationshipLabel>
    <relationshipName>student</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>