force-app/main/default/objects/studendCap__c/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <label>firstname</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>