force-app/main/default/objects/studendCap__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>