force-app/main/default/objects/studendCap__c/fields/studentId__c.field-meta.xml
<CustomField>
    <fullName>studentId__c</fullName>
    <label>studentId</label>
    <type>AutoNumber</type>
</CustomField>